--- a/app.json
+++ b/app.json
@@ -19,7 +19,12 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": [
+        "android.permission.CAMERA",
+        "android.permission.RECORD_AUDIO"
+      ],
+      "package": "com.chxyzn.walletui"
     },
     "web": {
       "bundler": "metro",
@@ -28,7 +33,6 @@
     },
     "plugins": [
       "expo-router",
-
       [
         "expo-camera",
         {
@@ -40,6 +44,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "348dd635-bf30-433b-81a7-aca28265cd43"
+      }
     }
   }
 }
